:construction_worker:- Build & Deploy by Travis CI

--- a/index.html
+++ b/index.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="/vue-code-view/favicon.ico" />
-    <title>vue-code-view</title>
-  <link href="/vue-code-view/js/0.js" rel="prefetch"><link href="/vue-code-view/js/1.js" rel="prefetch"><link href="/vue-code-view/js/app.js" rel="preload" as="script"><link href="/vue-code-view/js/chunk-vendors.js" rel="preload" as="script"></head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but vue-code-view doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  <script type="text/javascript" src="/vue-code-view/js/chunk-vendors.js"></script><script type="text/javascript" src="/vue-code-view/js/app.js"></script></body>
-</html>
+<!DOCTYPE html><html lang="zh-CN"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>vue-code-view</title><link href="/js/chunk-2d219fe8.88d6f8ba.js" rel="prefetch"><link href="/js/chunk-2d230e75.00a3c626.js" rel="prefetch"><link href="/css/app.bfabc05e.css" rel="preload" as="style"><link href="/css/chunk-vendors.047dfe31.css" rel="preload" as="style"><link href="/js/app.751ed9d2.js" rel="preload" as="script"><link href="/js/chunk-vendors.7d9b9db1.js" rel="preload" as="script"><link href="/css/chunk-vendors.047dfe31.css" rel="stylesheet"><link href="/css/app.bfabc05e.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but vue-code-view doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.7d9b9db1.js"></script><script src="/js/app.751ed9d2.js"></script></body><script async src="https://www.googletagmanager.com/gtag/js?id=G-Z19ZTBY1ZV"></script><script>window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-Z19ZTBY1ZV");</script></html>
