🌈 style: 项目网站首页支持响应式

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!-- built files will be auto injected -->
   </body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script
+  <!-- <script
     async
     src="https://www.googletagmanager.com/gtag/js?id=G-Z19ZTBY1ZV"
   ></script>
@@ -31,5 +31,5 @@
     gtag("js", new Date());
 
     gtag("config", "G-Z19ZTBY1ZV");
-  </script>
+  </script> -->
 </html>
