--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       width: 100vw;
     }
   </style>
+  <!-- <script type="module" src="./test/main.ts"></script> -->
+  <script type="module" src="/src/main.ts"></script>
 </head>
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
